            - Renamed forcedbiosmode to biosmode (RomCenter 3).
            - Renamed forcedsamplemode to samplemode (RomCenter 3).
            - Changed from m/s/n to merged/split/unmerged (RomCenter 3).
            - Changed from y/n to yes/no (RomCenter 3).
            - Added internal flags for all header items (fixes, warnings, etc).
            - Added warnings for invalid header items (appear in datutil.log).

24/03/2008  *** v2.24 ***

            - Fixed crash (allzip had spurious carriage returns in kyukaidk).

17/03/2008  *** v2.23 ***

            - Simplified the internal handling of CMPro and RomCenter headers.
            - Added date, email, homepage, url, comment, forcenodump to CMPro.
            - Added category to RomCenter header (for completeness).
            - Added the Generic XML format.
            - Note: CMPro, RomCenter and XML headers all contain the same info.

26/11/2007  *** v2.22 ***

            - Fixed crash when loading full MESS XML (0.105 upwards).
            - MESS: Support for new device attributes (type, tag and mandatory).
            - MESS: Support for machine "RAM options".
            - MAME + MESS: Support for new emulator "debug" attribute.
            - MAME + MESS: Changed "refresh" attributes from float to double.
            - MAME + MESS: Added driver "savestate" warnings.

29/07/2007  *** v2.21 ***

            - Empty attributes are now ignored (e.g. sha1="")
            - Removed cloneof, romof and sampleof fixes from datutil -i
            - DatUtil -i, -I and -p now default the output format to CMPro
              (in addition to -g, -G and -r which already behave like that)
            - Added support for the isbios="yes" of MAME v0.117u2 onwards.

01/01/2007  *** v2.20 ***

            - Added 'prune' feature for removing roms, disk and/or samples
            - Added 'incorporate' feature to assist in combining datafiles

30/12/2006  *** v2.19 ***
